--- a/app/src/main/res/menu/menu_bookmark_details.xml
+++ b/app/src/main/res/menu/menu_bookmark_details.xml
@@ -4,7 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=
-        "com.raywenderlich.placebook.ui.BookmarkDetailsActivity">
+        "com.ant.placebook.ui.BookmarkDetailsActivity">
+
+    <item
+        android:id="@+id/action_delete"
+        android:icon="@android:drawable/ic_menu_delete"
+        android:title="Delete"
+        app:showAsAction="ifRoom"/>
+
     <item
         android:id="@+id/action_save"
         android:icon="@drawable/ic_action_done"
